--- a/GamesEngine/GamesEngine.Service/GamesEngine.Service.csproj
+++ b/GamesEngine/GamesEngine.Service/GamesEngine.Service.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Math\Math.csproj" />
+  </ItemGroup>
+
 </Project>
