Started tests and implementation for testing using Collisions with Vectors and Matrices

--- a/GamesEngine/GamesEngine.Service/GamesEngine.Service.csproj
+++ b/GamesEngine/GamesEngine.Service/GamesEngine.Service.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Math\Math.csproj" />
+    <ProjectReference Include="..\GamesEngine.Math\GamesEngine.Math.csproj" />
   </ItemGroup>
 
 </Project>
