Added implementation for Communication.

--- a/GamesEngine/GamesEngine.Service/GamesEngine.Service.csproj
+++ b/GamesEngine/GamesEngine.Service/GamesEngine.Service.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Math\Math.csproj" />
+    <ProjectReference Include="..\GamesEngine.Math - Copy (2)\GamesEngine.Patterns.csproj" />
     <ProjectReference Include="..\GamesEngine.Math\GamesEngine.Math.csproj" />
   </ItemGroup>
 
