--- a/.gitignore
+++ b/.gitignore
@@ -5,42 +5,44 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+GamesEngine/.idea/**
+
 # User-specific stuff
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
+GamesEngine/.idea/**/workspace.xml
+GamesEngine/.idea/**/tasks.xml
+GamesEngine/.idea/**/usage.statistics.xml
+GamesEngine/.idea/**/dictionaries
+GamesEngine/.idea/**/shelf
 
 # AWS User-specific
-.idea/**/aws.xml
+GamesEngine/.idea/**/aws.xml
 
 # Generated files
-.idea/**/contentModel.xml
+GamesEngine/.idea/**/contentModel.xml
 
 # Sensitive or high-churn files
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
-.idea/**/dbnavigator.xml
+GamesEngine/.idea/**/dataSources/
+GamesEngine/.idea/**/dataSources.ids
+GamesEngine/.idea/**/dataSources.local.xml
+GamesEngine/.idea/**/sqlDataSources.xml
+GamesEngine/.idea/**/dynamic.xml
+GamesEngine/.idea/**/uiDesigner.xml
+GamesEngine/.idea/**/dbnavigator.xml
 
 # Gradle
-.idea/**/gradle.xml
-.idea/**/libraries
+GamesEngine/.idea/**/gradle.xml
+GamesEngine/.idea/**/libraries
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
 # auto-import.
-# .idea/artifacts
-# .idea/compiler.xml
-# .idea/jarRepositories.xml
-# .idea/modules.xml
-# .idea/*.iml
-# .idea/modules
+# GamesEngine/.idea/artifacts
+# GamesEngine/.idea/compiler.xml
+# GamesEngine/.idea/jarRepositories.xml
+# GamesEngine/.idea/modules.xml
+# GamesEngine/.idea/*.iml
+# GamesEngine/.idea/modules
 # *.iml
 # *.ipr
 
@@ -48,7 +50,7 @@
 cmake-build-*/
 
 # Mongo Explorer plugin
-.idea/**/mongoSettings.xml
+GamesEngine/.idea/**/mongoSettings.xml
 
 # File-based project format
 *.iws
@@ -63,10 +65,10 @@ out/
 atlassian-ide-plugin.xml
 
 # Cursive Clojure plugin
-.idea/replstate.xml
+GamesEngine/.idea/replstate.xml
 
 # SonarLint plugin
-.idea/sonarlint/
+GamesEngine/.idea/sonarlint/
 
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
@@ -75,44 +77,44 @@ crashlytics-build.properties
 fabric.properties
 
 # Editor-based Rest Client
-.idea/httpRequests
+GamesEngine/.idea/httpRequests
 
 # Android studio 3.1+ serialized cache file
-.idea/caches/build_file_checksums.ser
+GamesEngine/.idea/caches/build_file_checksums.ser
 
 ### Intellij Patch ###
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
 # *.iml
 # modules.xml
-# .idea/misc.xml
+# GamesEngine/.idea/misc.xml
 # *.ipr
 
 # Sonarlint plugin
 # https://plugins.jetbrains.com/plugin/7973-sonarlint
-.idea/**/sonarlint/
+GamesEngine/.idea/**/sonarlint/
 
 # SonarQube Plugin
 # https://plugins.jetbrains.com/plugin/7238-sonarqube-community-plugin
-.idea/**/sonarIssues.xml
+GamesEngine/.idea/**/sonarIssues.xml
 
 # Markdown Navigator plugin
 # https://plugins.jetbrains.com/plugin/7896-markdown-navigator-enhanced
-.idea/**/markdown-navigator.xml
-.idea/**/markdown-navigator-enh.xml
-.idea/**/markdown-navigator/
+GamesEngine/.idea/**/markdown-navigator.xml
+GamesEngine/.idea/**/markdown-navigator-enh.xml
+GamesEngine/.idea/**/markdown-navigator/
 
 # Cache file creation bug
 # See https://youtrack.jetbrains.com/issue/JBR-2257
-.idea/$CACHE_FILE$
+GamesEngine/.idea/$CACHE_FILE$
 
 # CodeStream plugin
 # https://plugins.jetbrains.com/plugin/12206-codestream
-.idea/codestream.xml
+GamesEngine/.idea/codestream.xml
 
 # Azure Toolkit for IntelliJ plugin
 # https://plugins.jetbrains.com/plugin/8053-azure-toolkit-for-intellij
-.idea/**/azureSettings.xml
+GamesEngine/.idea/**/azureSettings.xml
 
 ### Rider ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -132,12 +134,12 @@ fabric.properties
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
 # auto-import.
-# .idea/artifacts
-# .idea/compiler.xml
-# .idea/jarRepositories.xml
-# .idea/modules.xml
-# .idea/*.iml
-# .idea/modules
+# GamesEngine/.idea/artifacts
+# GamesEngine/.idea/compiler.xml
+# GamesEngine/.idea/jarRepositories.xml
+# GamesEngine/.idea/modules.xml
+# GamesEngine/.idea/*.iml
+# GamesEngine/.idea/modules
 # *.iml
 # *.ipr
 
