--- a/GamesEngine/GamesEngine.Communication/GamesEngine.Communication.csproj
+++ b/GamesEngine/GamesEngine.Communication/GamesEngine.Communication.csproj
@@ -6,12 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="NewFile1.txt" />
-  </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GamesEngine.Math - Copy (2)\GamesEngine.Patterns.csproj" />
+    <ProjectReference Include="..\GamesEngine.Patterns\GamesEngine.Patterns.csproj" />
   </ItemGroup>
 
 </Project>
