Added more communication stuff

--- a/GamesEngine/GamesEngine.Tests/GamesEngine.Tests.csproj
+++ b/GamesEngine/GamesEngine.Tests/GamesEngine.Tests.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GamesEngine.Communication\GamesEngine.Communication.csproj" />
     <ProjectReference Include="..\GamesEngine.Service\GamesEngine.Service.csproj" />
   </ItemGroup>
 
