--- a/GamesEngine/GamesEngine.Communication/GamesEngine.Communication.csproj
+++ b/GamesEngine/GamesEngine.Communication/GamesEngine.Communication.csproj
@@ -1,10 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
+	  <PackageReference Include="Microsoft.AspNetCore.App" />
+	  <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5" />
+
+	  <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
+
+	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
 
 
   <ItemGroup>
