Reformat frontend code, initialize communication instance, add default player game object values. Fix signalR message deserialize type

--- a/GamesEngine/StartUp/StartUp.csproj
+++ b/GamesEngine/StartUp/StartUp.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GamesEngine.Communication\GamesEngine.Communication.csproj" />
+    <ProjectReference Include="..\GamesEngine.Service\GamesEngine.Service.csproj" />
   </ItemGroup>
 
 </Project>
