--- a/GamesEngine/GamesEngine.Math/GamesEngine.Math.csproj
+++ b/GamesEngine/GamesEngine.Math/GamesEngine.Math.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="geometry3Sharp" Version="1.0.324" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
