--- a/GamesEngine/Client/Primitive/package.json
+++ b/GamesEngine/Client/Primitive/package.json
@@ -2,11 +2,11 @@
   "name": "primitive",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "keywords": [],
   "author": "",
