--- a/GamesEngine/StartUp/StartUp.csproj
+++ b/GamesEngine/StartUp/StartUp.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\GamesEngine.Service\GamesEngine.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="GameData\Materials\" />
+  </ItemGroup>
+
 </Project>
