Add object classes on front such as Matrix, Vector and GameObject

--- a/GamesEngine/Client/GamesEngineFrontend/package.json
+++ b/GamesEngine/Client/GamesEngineFrontend/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@microsoft/signalr": "^7.0.5",
+    "class-transformer": "^0.5.1",
     "three": "^0.152.2"
   }
 }
